tests/neg/str1.scala
def main(): Unit =
  val xs = "hello"
  val ys: String = "world"  // error
